--- a/package.json
+++ b/package.json
@@ -35,9 +35,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {
-    "msw": "^0.44.1"
-  },
+  "devDependencies": {},
   "msw": {
     "workerDirectory": "public"
   }
